# Topology-of-LLMs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: default.yaml
src/topo_llm/: __init__.py  cli.py  config.py  device.py  types.py
src/topo_llm/applications/: README.md  __init__.py  hallucination.py  retrieval.py
src/topo_llm/extraction/: README.md  __init__.py  datasets.py  extractor.py  layers.py
src/topo_llm/information/: README.md  __init__.py  divergence.py  entropy.py  fisher.py
src/topo_llm/riemannian/: README.md  __init__.py  connection.py  curvature.py  geodesic.py  metric.py  search.py
src/topo_llm/topology/: README.md  __init__.py  distances.py  features.py  filtration.py  homology.py  landscapes.py
src/topo_llm/visualization/: README.md  __init__.py  information.py  manifold.py  paper.py  persistence.py
tests/: conftest.py
tests/integration/: test_cross_module.py  test_end_to_end.py  test_riemannian_pipeline.py  test_topology_pipeline.py
tests/unit/: test_cli.py  test_config.py  test_device.py  test_types.py
tests/unit/applications/: test_hallucination.py  test_retrieval.py
tests/unit/extraction/: test_datasets.py  test_extractor.py  test_layers.py
tests/unit/information/: test_divergence.py  test_entropy.py  test_fisher.py
tests/unit/riemannian/: test_connection.py  test_curvature.py  test_geodesic.py  test_metric.py  test_search.py
tests/unit/topology/: test_distances.py  test_features.py  test_filtration.py  test_homology.py  test_landscapes.py
tests/unit/visualization/: test_information.py  test_manifold.py  test_paper.py  test_persistence.py
